test math eq numbers
test

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -8,6 +8,30 @@ tags:
   - category2
 ---
 
+<script>
+  window.MathJax = {
+    tex: {
+      tags: 'all',
+      packages: {'[+]': ['ams']}
+    }
+  };
+</script>
+<script type="text/javascript" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+
+We define energy as:
+
+\[
+\begin{equation}
+E = mc^2
+\label{eq:energy}
+\end{equation}
+\]
+
+As seen in Equation \(\ref{eq:energy}\), energy and mass are equivalent.
+
+
 This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
 
 Headings are cool
